--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
         <p> ROT13 ("rotate by 13 places", sometimes hyphenated ROT-13) is a simple letter substitution cipher that replaces a letter with the letter 13 letters after it in the alphabet. ROT13 is a special case of the Caesar cipher, developed in ancient Rome. This is my rookie implementation. You could search google for better ones. You can find more about Rot13 <a href="https://en.wikipedia.org/wiki/ROT13">here</a></p>
         </div>
         <input class='input' type="text" name="myInput" placeholder="Enter english Word to Decode or Encode">
-        <button class="button btn-primary">click me!</button>
-        <p id="answer"></p>
+        <button class="button btn-primary">Decode!</button>
+        <div class="img-box">
+            <p>Deciphered Word</p>
+            <hr size="2">
+            <p id="answer"></p>
+        </div>
     </div>
     <hr size="10" noshade >
     <footer class="text-center jumbotron"> Coded by  <a href="https://twitter.com/iyoha_osaro" target="_blank">Osaro Iyoha</a></br>
